# chess

./: .gitignore  LICENSE  README.md  build.py  main.py  openings_data.py  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
static/css/: style.css
static/js/: board.js  board3d.js  pgn.js  sounds.js
templates/: base.html  index.html  opening.html  pgn.html
