[project]
name = "chess-openings-academy"
version = "0.1.0"
description = "Interactive chess openings tutorial — Colle, Dutch, Rousseau Gambit, Scotch Gambit"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "jinja2==3.1.4",
    "python-multipart==0.0.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]   # FastAPI uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"openings_data.py" = ["E501"]   # long FEN strings and explanations can't be split

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
